<resources>
    <!--<string name="hello">Hello World, KotakDialog!</string>-->
    <!--<string name="app_name">Membuat Kotak Dialog</string>-->
    <string name="toastTextBtn">Panggil Toast</string>
    <string name="exitTextBtn">Keluar Aplikasi</string>
    <string name="listDialogTextBtn">Panggil List Dialog</string>
    <string name="perintah">Masukan Minimal 3 Nilai</string>

    <!--<string name="hello">Hello World, checkBox!</string>-->
    <!--<string name="app_name">Membuat Check Box</string>-->
    <string name="checkBox">checkBox ini : tidak Dicentang!</string>

    <string name="hello">ServiceSederhana!</string>
    <string name="app_name">Service Background Sederhana</string>
    <string name="startBtn">Start</string>
    <string name="stopBtn">Stop</string>
</resources>
