<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_kotak_dialog"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/kai"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="linear.com.relativelayout.KotakDialog">

    <Button android:layout_width="fill_parent"
        android:id="@+id/toastBtn"
        android:layout_height="wrap_content"
        android:text="@string/toastTextBtn"></Button>

    <Button android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listDialogBtn"
        android:text="@string/listDialogTextBtn"></Button>

    <Button android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/exitTextBtn"
        android:id="@+id/exitBtn"></Button>

</LinearLayout>
